--- a/widescreen.css
+++ b/widescreen.css
@@ -2,11 +2,10 @@
 
 html, main, body{
 	background-color: #565656;
+	margin: 15px;
 }
 
 .top-nav{
-	top: 2px;
-	left: 2px;
 	height: 50px;
 	background-color: #282828;
 	display: flex;
@@ -67,32 +66,40 @@ html, main, body{
 	text-align: center;
 }
 
-.container {
-	z-index: 0;
+#box {
+	top: 30px;
+	width: 95%;
+	height: 50px;
+  }
+  .gradient-border {
+	--borderWidth: 3px;
+	background: #1D1F20;
+	position: fixed;
+	border-radius: var(--borderWidth);
+  }
+  .gradient-border:after {
+	content: '';
 	position: absolute;
-	top: 0;
-	left: 0;
-	margin: 0 auto;
-	width: 100%;
-	height: 54px;
-	/*outline: 1px solid red;*/
-	border: 2px solid transparent;
-	box-sizing: border-box;
+	top: calc(-1 * var(--borderWidth));
+	left: calc(-1 * var(--borderWidth));
+	height: calc(100% + var(--borderWidth) * 2);
+	width: calc(100% + var(--borderWidth) * 2);
+	background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+	border-radius: calc(2 * var(--borderWidth));
+	z-index: -1;
+	animation: animatedgradient 3s ease alternate infinite;
+	background-size: 300% 300%;
   }
-
-  .animated {
-	background-image:
-	  linear-gradient(#282828, #282828),
-	  linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
-	background-repeat: no-repeat;
-	background-size: 100% 100%, 100% 200%;
-	background-position: 0 0, 0 100%;
-	background-origin: padding-box, border-box;
-	animation: highlight 1s infinite alternate;
-  }
-
-  @keyframes highlight {
-	100% {
-	  background-position: 0 0, 0 0;
-	}
+  
+  
+  @keyframes animatedgradient {
+	  0% {
+		  background-position: 0% 50%;
+	  }
+	  50% {
+		  background-position: 100% 50%;
+	  }
+	  100% {
+		  background-position: 0% 50%;
+	  }
   }
