--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -14,7 +14,7 @@
         width: 100%;
         height: 80px;
         border-bottom: 1px solid black;
-
+        
         .menu-nav{
             display: block;
             transform: translateY(0);
@@ -22,6 +22,7 @@
             height: 100%;
             background: transparent;
             text-align: center;
+            
 
             &__item{
                 display: inline;
@@ -33,7 +34,7 @@
             }
             
             
-        }
+        } 
     }
 
     .home{
@@ -46,6 +47,12 @@
         &__text{
             font-size: 2rem;
         }
+    }
+
+    .about{
+
+        padding-top: 80px;
+
     }
 }
 
@@ -87,6 +94,12 @@
         &__text{
             font-size: 2.9rem;
         }
+    }
+
+    .about{
+
+        padding-top: 90px;
+
     }
 }
 
