Mobile Projects Section Complete

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -50,9 +50,13 @@
     }
 
     .about{
-
+        height: 140%;
         padding-top: 80px;
 
+    }
+
+    .projects{
+        padding-top: 80px;
     }
 }
 
@@ -100,6 +104,9 @@
 
         padding-top: 90px;
 
+    }
+    .projects{
+        padding-top: 90px;
     }
 }
 
