--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -19,15 +19,15 @@
     }
 
     .projects{
-        height: 75%;
+        height: 220%;
         padding-top: 80px;
 
         &__items{
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: 1fr;
         }
 
         &__btn{
-            font-size: .3rem;
+            font-size: 1rem;
         }
     }
 
